// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppLayout Component AppLayout Snapshot renderer 1`] = `
<div
  className="css-14fwp1f"
>
  <div
    className="css-1esthja"
  >
    <div
      className="css-1esthja"
    >
      0
    </div>
    <div
      className="css-1esthja"
    >
      <div
        className="css-1esthja"
      />
      <div
        className="css-1esthja"
      />
      <div
        className="css-1esthja"
      >
        <button
          className="css-1esthja"
        >
          
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppLayout Component ContentLayout Snapshot renderer 1`] = `
<div
  className="css-14fwp1f"
/>
`;
